--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "es"
   ],
   "scripts": {
+    "dev": "vite",
     "build": "rimraf es && rollup -c",
     "publish": "yarn build && npm publish",
     "chromatic": "npx chromatic --project-token=10adf2ba5cae",
@@ -39,10 +40,13 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
+    "@vitejs/plugin-react-swc": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "vite": "^4.2.1"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.2",
