--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ghgenz/react-dialog",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "author": {
     "name": "xevckq@proton.me",
     "email": "xevckq@proton.me"
@@ -43,22 +43,22 @@
     "@ant-design/icons": "^5.0.1"
   },
   "devDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.8.2",
-    "vite": "^4.2.1",
-    "@vitejs/plugin-react-swc": "^3.2.0",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^14.1.0",
     "@rollup/plugin-strip": "^2.1.0",
     "@rollup/plugin-typescript": "^8.5.0",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react-swc": "^3.2.0",
     "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
     "rollup-plugin-node-externals": "^5.0.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "sass": "^1.60.0"
+    "sass": "^1.60.0",
+    "typescript": "^4.8.2",
+    "vite": "^4.2.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
