--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ghgenz/react-dialog",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "author": {
     "name": "xevckq@proton.me",
     "email": "xevckq@proton.me"
@@ -39,14 +39,7 @@
       "last 1 safari version"
     ]
   },
-  "dependencies": {
-    "@ant-design/icons": "^5.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.8.2",
-    "vite": "^4.2.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^14.1.0",
@@ -54,11 +47,17 @@
     "@rollup/plugin-typescript": "^8.5.0",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@vitejs/plugin-react-swc": "^3.2.0",
     "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
     "rollup-plugin-node-externals": "^5.0.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "sass": "^1.60.0"
+    "sass": "^1.60.0",
+    "typescript": "^4.8.2",
+    "vite": "^4.2.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
